--- a/Template/pc/yundi/Static/style/style2/style.css
+++ b/Template/pc/yundi/Static/style/style2/style.css
@@ -11,11 +11,11 @@ a { color: #960; }
 a:hover { color: #600;}
 
 /* 导航区域布局控制 */
-.ncsl-nav { text-align: center; width: 100%; height: 350px; position: relative; z-index: 1;}
+.ncsl-nav { text-align: center; width: 100%; position: relative; z-index: 1;}
 .ncsl-nav .banner a.img { width: 1200px; margin: 0 auto;}
 .ncs-default-banner { background: url(images/header.png) no-repeat 50% 0; display: block; width: 100%; height: 306px; position: absolute; z-index: 2; top:0; left:0;}
 /* 店铺导航 */
-#nav { background: url(images/nav_bg.png) no-repeat center top; width: 100%; height: 60px; padding-bottom: 95px; border: none 0; overflow: hidden; position: absolute; z-index:3; left:0; top:280px;}
+#nav { background: url(images/nav_bg.png) no-repeat center top; width: 100%; height: 60px; border: none 0; overflow: hidden;  z-index:3; left:0; top:280px;}
 #nav ul { white-space: nowrap; display: block; width: 982px; height: 36px; margin: 10px auto auto auto; overflow: hidden;}
 #nav li { float: left; padding: 0px 20px 0px 26px;}
 #nav ul li:first-child { background-image: none;}/* 排行列表第一行不显示上虚线 */
