--- a/Application/Seller/View/News/addNews.html
+++ b/Application/Seller/View/News/addNews.html
@@ -61,6 +61,12 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    <td>关键词：</td>
+                                    <td>
+                                        <textarea class="form-control" name='description' rows="2">{$info.description}</textarea>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>文章简介：</td>
                                     <td>
                                         <textarea class="form-control" name='shorttitle' rows="3">{$info.shorttitle}</textarea>
