--- a/Merchants_tpl/pc/default/css/main2.css
+++ b/Merchants_tpl/pc/default/css/main2.css
@@ -69,7 +69,7 @@ footer{ margin:50px auto; font-size:14px; line-height:30px; text-align:center;}
 
 .main_visual{height:422px;border-top:1px solid #d7d7d7;overflow:hidden;position:relative;}
 .main_image{height:422px;overflow:hidden;position:relative;}
-.main_image ul{width:9999px;height:422px;overflow:hidden;position:absolute;top:0;left:0}
+.main_image ul{width:100%;height:422px;overflow:hidden;position:absolute;top:0;left:0}
 .main_image li{float:left;width:100%;height:422px;}
 .main_image li span{display:block;width:100%;height:422px}
 .main_image li a{display:block;width:100%;height:422px}
